2008-10-29  Chong Yidong  <cyd@stupidchicken.com>

	* emacs.c (Fdaemon_initialized): Initialize nfd.

2008-10-29  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fwindow_height, Fdelete_window, set_window_buffer)
	(Fwindow_text_height): Clarify doc-strings.
	* xdisp.c (syms_of_xdisp): Mention set-window-buffer in
	doc-string of window-scroll-functions.

2008-10-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* category.c (syms_of_category): Fix typo in docstring.

2008-10-28  Juanma Barranquero  <lekktu@gmail.com>

	* window.c (Fwindowp, Fwindow_live_p, Fwindow_minibuffer_p)
	(Fcoordinates_in_window_p, Fscroll_left, Fscroll_right):
	Fix typos in docstrings.

2008-10-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (daemon_pipe): Make non-static.
	(IS_DAEMON): Move definition ...
	* lisp.h (IS_DAEMON): ... here.
	(daemon_pipe): Declare.
	(is_daemon): Remove.
	* dispnew.c (init_display): Use IS_DAEMON.

2008-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (pos_visible_p, redisplay_internal, message3_nolog)
	(message2_nolog): Check FRAME_INITIAL_P instead of noninteractively.

	* emacs.c (is_daemon): Remove.
	(main): Don't set is_daemon.
	(IS_DAEMON): New macro.
	(Fdaemonp, Fdaemon_initialized): Use it.
	(Fdaemon_initialized): Wrtie a char into the pipe to make sure the
	parent exits.
	(syms_of_emacs): Explicitly initialize daemon_pipe[1].

2008-10-27  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_draw_window_cursor): When hbar cursor is on
	over-sized glyph, draw it with the default glyph width.

	* w32term.c (x_draw_bar_cursor): When hbar cursor is on over-sized
	glyph, draw it with the default glyph width.

	* xterm.c (x_draw_bar_cursor): When hbar cursor is on over-sized
	glyph, draw it with the default glyph width.

	* xdisp.c (try_scrolling): When computing the distance from the
	scroll margin to PT, try moving some distance past the window
	bottom before giving up.

2008-10-27  Martin Rudalics  <rudalics@gmx.at>
